update product details view

--- a/src/Frontend/Pages/Shared/_Layout.cshtml
+++ b/src/Frontend/Pages/Shared/_Layout.cshtml
@@ -11,18 +11,7 @@
 <body>
 <header>
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">
-                <h1 class="navbar-brand mb-0 fw-bold text-primary">E-Bazar</h1>
-            </a>
-            <div class="d-flex" >
-                <button class="btn border" type="button">
-                    <img src="/assets/icons/cart.ico" alt="logo"/> Cart (4)
-                </button>
-            </div>
-        </div>
-    </nav>
+    <partial name="_navPartial"/>
     
 </header>
 <div class="container">
