--- a/src/Frontend/Pages/PartialView/_productListPartial.cshtml
+++ b/src/Frontend/Pages/PartialView/_productListPartial.cshtml
@@ -5,27 +5,58 @@
 
 
 
-<div class="row">
+<div class="row g-0">
     @if (Model.Data.Any())
     {
-        <div class="">
+        <div class="col-md-12">
             <span
                 class="fw-bold mt-3 mb-5 fs-6">showing @((Model.CurrentPage - 1) * Model.PageSize + 1) - @((Model.CurrentPage - 1) * Model.PageSize + Model.Data.Count) of @Model.TotalItems results</span>
         </div>
         foreach (var product in Model.Data)
         {
-            <div class="col-md-4 mb-4 mt-2">
-                <div class="card h-100">
+            <div class="col-md-3">
+                
+                <div class="card ">
+                    <div>
+                        <img src="@(product.ImageUrl ?? Url.Content("~/assets/img/drone.png"))" alt="@product.Name"
+                             class="card-img-top w-100" style="height: 200px; object-fit: contain;"/>
+                    </div>
+                    
+
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@product.Name</h5>
-                        <p class="card-text flex-grow-1">@product.Description</p>
-                        <div>
+
+                        <div class="mb-2">
                             <span class="fw-bold text-success">$@product.OriginalPrice</span>
                             @if (product.DiscountPercentage.HasValue && product.DiscountPercentage > 0 && product.IsDiscounted)
                             {
                                 <span class="text-muted text-decoration-line-through ms-2">
-                                    $@(product.FinalPrice / (1 - product.DiscountPercentage.Value / 100))
+                                    $@(Math.Round(product.OriginalPrice / (1 - product.DiscountPercentage.Value / 100), 2))
                                 </span>
+                            }
+                        </div>
+
+                        <div class="mt-auto">
+                            @* @if (Model.Cart.ContainsKey(product.Id)) *@
+                            @if (true)
+                            {
+                                <form method="post" asp-page-handler="DecreaseQuantity" class="d-inline">
+                                    <input type="hidden" name="productId" value="@product.Id"/>
+                                    <button type="submit" class="btn btn-primary">-</button>
+                                </form>
+                                @* <span class="btn btn-light">@Model.Cart[product.Id]</span> *@
+                                <span class="btn btn-light">ii</span>
+                                <form method="post" asp-page-handler="IncreaseQuantity" class="d-inline">
+                                    <input type="hidden" name="productId" value="@product.Id"/>
+                                    <button type="submit" class="btn btn-primary">+</button>
+                                </form>
+                            }
+                            else
+                            {
+                                <form method="post" asp-page-handler="AddToCart">
+                                    <input type="hidden" name="productId" value="@product.Id"/>
+                                    <button type="submit" class="btn btn-outline-primary">Add to cart</button>
+                                </form>
                             }
                         </div>
                     </div>
