--- a/src/Frontend/Pages/Shared/_Layout.cshtml
+++ b/src/Frontend/Pages/Shared/_Layout.cshtml
@@ -10,22 +10,27 @@
     <link rel="stylesheet" href="~/Frontend.styles.css" asp-append-version="true"/>
 </head>
 <body>
-<header>
 
-    <partial name="_navPartial"/>
-    
-</header>
-<div class="container">
-    <main role="main" class="pb-3">
-        @RenderBody()
+<div class="d-flex flex-column min-vh-100">
+    <header>
+        <partial name="_navPartial" />
+    </header>
+
+    <main class="flex-fill">
+        <div class="container py-3">
+            @RenderBody()
+        </div>
     </main>
+
+    @* <footer class="border-top footer text-muted mt-auto py-3"> *@
+    @*     <div class="container"> *@
+    @*         &copy; 2025 - Frontend - <a asp-area="" asp-page="/Privacy">Privacy</a> *@
+    @*     </div> *@
+    @* </footer> *@
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2025 - Frontend - <a asp-area="" asp-page="/Privacy">Privacy</a>
-    </div>
-</footer>
+
+
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
