--- a/src/Frontend/Pages/PartialView/_productListPartial.cshtml
+++ b/src/Frontend/Pages/PartialView/_productListPartial.cshtml
@@ -3,6 +3,9 @@
 
 @model PaginatedResult<Product>
 
+@{
+    var apiUrl = ViewData["ApiUrl"];
+}
 
 
 <div class="row g-0">
@@ -15,13 +18,13 @@
         foreach (var product in Model.Data)
         {
             <div class="col-md-3">
-                
+
                 <div class="card ">
                     <div>
                         <img src="@(product.ImageUrl ?? Url.Content("~/assets/img/drone.png"))" alt="@product.Name"
                              class="card-img-top w-100" style="height: 200px; object-fit: contain;"/>
                     </div>
-                    
+
 
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@product.Name</h5>
@@ -40,23 +43,13 @@
                             @* @if (Model.Cart.ContainsKey(product.Id)) *@
                             @if (true)
                             {
-                                <form method="post" asp-page-handler="DecreaseQuantity" class="d-inline">
-                                    <input type="hidden" name="productId" value="@product.Id"/>
-                                    <button type="submit" class="btn btn-primary">-</button>
-                                </form>
-                                @* <span class="btn btn-light">@Model.Cart[product.Id]</span> *@
-                                <span class="btn btn-light">ii</span>
-                                <form method="post" asp-page-handler="IncreaseQuantity" class="d-inline">
-                                    <input type="hidden" name="productId" value="@product.Id"/>
-                                    <button type="submit" class="btn btn-primary">+</button>
-                                </form>
+                                <button class="btn btn-primary decreaseCartBtn" data-product-id="@product.Id">-</button>
+                                <span class="btn btn-light btn-primary">2</span>
+                                <button class="btn btn-primary increaseCartBtn" data-product-id="@product.Id">+</button>
                             }
                             else
                             {
-                                <form method="post" asp-page-handler="AddToCart">
-                                    <input type="hidden" name="productId" value="@product.Id"/>
-                                    <button type="submit" class="btn btn-outline-primary">Add to cart</button>
-                                </form>
+                                <button class="btn border increaseCartBtn" data-product-id="@product.Id">Add to cart</button>
                             }
                         </div>
                     </div>
@@ -69,3 +62,75 @@
         <p class="text-center">No products found.</p>
     }
 </div>
+
+<script src="lib/jquery/dist/jquery.min.js"></script>
+<script>
+
+    $(document).ready(function () {
+        let decreaseBtn = document.getElementsByClassName("decreaseCartBtn");
+
+        for (let i = 0; i < decreaseBtn.length; i++) {
+            decreaseBtn[i].onclick = function () {
+                let productId = this.dataset.productId;
+
+                decreaseCartItem(productId)
+            };
+        }
+        
+        let addOrIncreaseBtn = document.getElementsByClassName("increaseCartBtn");
+
+        for (let i = 0; i < addOrIncreaseBtn.length; i++) {
+            addOrIncreaseBtn[i].onclick = function () {
+                let productId = this.dataset.productId;
+
+                addOrIncreaseCartItem(productId)
+            };
+        }
+    });
+
+
+</script>
+
+<script>
+
+    async function addOrIncreaseCartItem(productId) {
+        const apiUrl = '@apiUrl';
+        const url = `${apiUrl}/cart/increase/${productId}`;
+
+        return $.ajax({
+            url: url,
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({ productId: productId, quantity: 1 }),
+        })
+            .done(function () {
+                alert('Quantity increased successfully');
+            })
+            .fail(function () {
+                alert('Failed to increase quantity');
+            });
+
+    }
+
+    async function decreaseCartItem(productId) {
+        const apiUrl = '@apiUrl';
+        const url = `${apiUrl}/cart/decrease/${productId}`;
+
+
+        return $.ajax({
+            url: url,
+            type: 'DELETE',
+            contentType: 'application/json',
+        })
+            .done(function () {
+                alert('Quantity decreased successfully');
+            })
+            .fail(function () {
+                alert('Failed to decrease quantity');
+            });
+
+    }
+
+
+</script>
+
