--- a/src/Frontend/Pages/Shared/_navPartial.cshtml
+++ b/src/Frontend/Pages/Shared/_navPartial.cshtml
@@ -1,8 +1,8 @@
 
 
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 p-3">
     <div class="container">
-        <a class="navbar-brand" asp-area="" asp-page="/Index" style="margin-top: 36px">
+        <a class="navbar-brand" asp-area="" asp-page="/Index" style="">
             <h1 class="navbar-brand mb-0 fw-bold text-primary">E-Bazar</h1>
         </a>
         <div class="d-flex" >
