--- a/src/Frontend/Pages/PartialView/_productListPartial.cshtml
+++ b/src/Frontend/Pages/PartialView/_productListPartial.cshtml
@@ -27,10 +27,10 @@
 
 
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">@product.Name</h5>
+                        <h5 class="card-title product-name">@product.Name</h5>
 
                         <div class="mb-2">
-                            <span class="fw-bold text-success">$@product.OriginalPrice</span>
+                            <span class="fw-bold text-success product-price">$@product.OriginalPrice</span>
                             @if (product.DiscountPercentage.HasValue && product.DiscountPercentage > 0 && product.IsDiscounted)
                             {
                                 <span class="text-muted text-decoration-line-through ms-2">
@@ -81,9 +81,20 @@
             addOrIncreaseBtn[i].onclick = function () {
                 let productId = this.dataset.productId;
 
-                addToCart(productId, apiUrl);
+                const cardBody = this.closest(".card-body");
+                const productName = cardBody.querySelector(".product-name")?.textContent.trim() || 'Unknown';
+                const productPriceText = cardBody.querySelector(".product-price")?.textContent.trim() || '0';
+                const productPrice = parseFloat(productPriceText.replace(/[^0-9.]/g, ''));
+
+                console.log("Product Name:", productName);
+                console.log("Product Price:", productPrice);
+
+                addToCart(apiUrl, productId, productName, productPrice);
             };
         }
+        
+        
+        loadCart();
     });
 
 
