--- a/src/Frontend/Pages/Shared/_navPartial.cshtml
+++ b/src/Frontend/Pages/Shared/_navPartial.cshtml
@@ -30,11 +30,10 @@
             </div>
             
 
-            <div class="d-none align-items-start mb-4 pb-3" style="border-bottom: 2px dashed #dee2e6;">
-                <img src="/assets/img/drone.png" class="rounded border p-1 me-3" style="width: 60px; height: 60px; object-fit: cover;" alt="Product">
-                <div>
-                    <div class="fw-medium">DJI Phantom 2 Vision+</div>
-                    <div class="text-muted small">Qty: 1</div>
+            <div style="position: fixed; bottom: 0;" >
+                <div class="d-flex justify-content-between align-items-center mb-5 fs-3">
+                    <div class="fw-bold">Subtotal:</div>
+                    <div class="fw-bold" id="cartTotal">$0.00</div>
                 </div>
             </div>
             
@@ -42,6 +41,16 @@
 
     </div>
 </div>
+
+
+
+@* <div class="d-none align-items-start mb-4 pb-3" style="border-bottom: 2px dashed #dee2e6;"> *@
+@*     <img src="/assets/img/drone.png" class="rounded border p-1 me-3" style="width: 60px; height: 60px; object-fit: cover;" alt="Product"> *@
+@*     <div> *@
+@*         <div class="fw-medium">DJI Phantom 2 Vision+</div> *@
+@*         <div class="text-muted small">Qty: 1</div> *@
+@*     </div> *@
+@* </div> *@
 
 
 <script src="/js/cart.js"></script>
@@ -69,9 +78,12 @@
         const cartSummaryItems = document.getElementById('cartSummaryItems');
         cartSummaryItems.innerHTML = ''; // Clear previous items
         
+        var subtotal = 0;
         if (cart.items && cart.items.length > 0) {
             cart.items.forEach(item => {
-                console.log(item)
+                subtotal += item.price * item.quantity;
+                
+                
                 const html = `
             <div class="d-flex align-items-start mb-4 pb-3" style="border-bottom: 2px dashed #dee2e6;">
                 <img src="${item.image ?? '/assets/img/drone.png'}" class="rounded border p-1 me-3" style="width: 60px; height: 60px; object-fit: cover;" alt="Product">
@@ -83,6 +95,8 @@
         `;
 
                 cartSummaryItems.insertAdjacentHTML('beforeend', html);
+                
+                document.getElementById('cartTotal').textContent = `$${subtotal}`;
             });
         } else {
             cartSummaryItems.innerHTML = '<p class="text-center">Your cart is empty.</p>';
