--- a/src/Frontend/Pages/Index.cshtml
+++ b/src/Frontend/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Frontend.Models
 @model Frontend.Pages.IndexModel
 @{
     ViewData["Title"] = "Products";
@@ -70,13 +71,15 @@
             </form>
         </div>
         <div class="col-md-3">
-            <button class="btn border w-100 text-primary"><i class="fas fa-plus-circle"></i> Add Product</button>
+            <button class="btn border w-100 text-primary" id="openCreateModal"><i class="fas fa-plus-circle"></i> Add Product</button>
         </div>
 
     </div>
 
 
     <partial name="PartialView/_productListPartial" model="Model.Products"/>
+
+    <partial name="PartialView/_productCreatePartial" model="new Product()"/>
 
 
     <div class="mt-8 flex justify-content-end space-x-4">
