--- a/src/Frontend/Pages/PartialView/_productCreatePartial.cshtml
+++ b/src/Frontend/Pages/PartialView/_productCreatePartial.cshtml
@@ -5,29 +5,55 @@
 
 
 <div class="modal fade" id="createProductModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body" id="createModalContent">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content p-3">
+            <div class="modal-header">
+                <h5 class="modal-title fw-bold" id="addProductModalLabel">Add New Product</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
+            <div class="modal-body">
+                <p class="text-muted">Add description of your new product.</p>
 
-                <div>
-                    <h1>Create Product</h1>
-
-                    <div class="mb-3">
-                        <label>Name</label>
-                        <input class="form-control" name="Name" id="productName" />
+                <form>
+                    <div class="row mb-3">
+                        <div class="col-md-8">
+                            <label class="form-label">Product Name</label>
+                            <input type="text" class="form-control" id="productName" placeholder="Product name">
+                        </div>
+                        <div class="col-md-4">
+                            <label class="form-label">Price</label>
+                            <input type="number" class="form-control" id="productPrice" placeholder="Price">
+                        </div>
                     </div>
 
-                    <div class="mb-3">
-                        <label>Original Price</label>
-                        <input class="form-control" name="OriginalPrice" id="productPrice" type="number" />
+                    <div class="row mb-3">
+                        <div class="col-md-10">
+                            <label class="form-label">Slug</label>
+                            <input type="text" class="form-control" placeholder="product-name">
+                        </div>
+                        <div class="col-md-2 d-flex align-items-end">
+                            <button type="button" class="btn btn-primary w-100">Generate</button>
+                        </div>
                     </div>
 
-                    <button class="btn btn-primary" id="createProductBtn" data-api-url="@apiUrl">Create Product</button>
-                </div>
+                    <div class="row mb-4">
+                        <div class="col-md-6">
+                            <label class="form-label">Discount Start</label>
+                            <input type="date" id="discountStart" class="form-control">
+                        </div>
+                        <div class="col-md-6">
+                            <label class="form-label">Discount End</label>
+                            <input type="date" id="discountEnd" class="form-control">
+                        </div>
+                    </div>
+
+                    <button type="button" id="createProductBtn" class="btn btn-primary w-100">Add</button>
+                </form>
             </div>
         </div>
     </div>
+</div>
 </div>
 
 
@@ -43,11 +69,14 @@
         $(document).on('click', '#createProductBtn', function () {
             const name = $('#productName').val();
             const price = parseFloat($('#productPrice').val());
-            const apiUrl = $(this).data('api-url');
+            const discountStart = new Date($('#discountStart').val()).toISOString();
+            const discountEnd = new Date($('#discountEnd').val()).toISOString();
 
             const product = {
                 name: name,
-                price: price
+                price: price,
+                discountStartDate:discountStart,
+                discountEndDate:discountEnd
             };
 
             const url = `${window.apiUrl}/products/upsert`;
