--- a/src/Frontend/Pages/PartialView/_productCreatePartial.cshtml
+++ b/src/Frontend/Pages/PartialView/_productCreatePartial.cshtml
@@ -46,6 +46,10 @@
                             <label class="form-label">Discount End</label>
                             <input type="date" id="discountEnd" class="form-control">
                         </div>
+                        <div class="col-md-6">
+                            <label class="form-label">Discount %</label>
+                            <input type="number" id="discountPercentage" class="form-control">
+                        </div>
                     </div>
 
                     <button type="button" id="createProductBtn" class="btn btn-primary w-100">Add</button>
@@ -69,6 +73,7 @@
         $(document).on('click', '#createProductBtn', function () {
             const name = $('#productName').val();
             const price = parseFloat($('#productPrice').val());
+            const discountPercentage = parseFloat($('#discountPercentage').val());
             const discountStart = new Date($('#discountStart').val()).toISOString();
             const discountEnd = new Date($('#discountEnd').val()).toISOString();
 
@@ -76,7 +81,8 @@
                 name: name,
                 price: price,
                 discountStartDate:discountStart,
-                discountEndDate:discountEnd
+                discountEndDate:discountEnd,
+                discountPercentage:discountPercentage
             };
 
             const url = `${window.apiUrl}/products/upsert`;
