--- a/src/Frontend/Pages/PartialView/_productCreatePartial.cshtml
+++ b/src/Frontend/Pages/PartialView/_productCreatePartial.cshtml
@@ -97,6 +97,8 @@
                 success: function () {
                     alert('product added successfully');
                     $('#createProductModal').modal('hide');
+
+                    location.reload();
                 },
                 error: function (err) {
                     console.error('Error loading cart', err);
